# diloti.online

./: .gitignore  Cargo.toml  LICENCE  Makefile.toml  README.md
backend/: Cargo.toml
backend/src/: chararr_id.rs  common.rs  directory.rs  directory_task.rs  game.rs  game_task.rs  lib.rs  main.rs  player.rs  player_task.rs
common/: Cargo.toml
common/src/: lib.rs
core/: Cargo.toml
core/src/: actions.rs  card.rs  deck.rs  error.rs  game.rs  lib.rs  repr.rs  scoring.rs  srvcli.rs  table.rs
core/src/tests/: actions.rs  mod.rs
frontend/: .gitignore  Cargo.toml  Makefile.toml  index.html
frontend/src/: game.rs  init.rs  join.rs  lib.rs  lobby.rs  to_elem.rs  ws.rs
