[package]
name = "dilotionline"
version = "0.1.0"
authors = ["Kornilios Kourtis <kkourt@kkourt.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
     "backend",
     "frontend",
     "core",
]

[dependencies]
core = { path = "./core" }
# warp = "0.2"
# tokio = { version = "0.2", features  = ["macros"] }
