[package]
name = "backend"
version = "0.1.0"
authors = ["Kornilios Kourtis <kkourt@kkourt.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
warp = "0.2"
core = { path = "../core" }
tokio = { version = "0.2", features  = ["macros"] }
log = "0.4.0"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.4"
