[package]
name = "dilotionline-frontend"
version = "0.1.0"
authors = ["Kornilios Kourtis <kkourt@kkourt.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
core = { path = "../core/" }
futures = "^0.3.4"
js-sys = "0.3"
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "1.0"
url = "2.1.1"

[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Location",
  "ErrorEvent",
  "CloseEvent",
  "WebSocket",
]


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'

[dependencies.rand]
version = "0.7"
features = ['wasm-bindgen']

[dependencies.rand_pcg]
version = "0.2.1"

